--- a/style.css
+++ b/style.css
@@ -154,14 +154,14 @@ body {
 }
 
 
-.about{
+.about {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     align-items: center;
     gap: 1.5rem;
 }
 
-.about-img img{
+.about-img img {
     padding-bottom: 20%;
     max-width: 630px;
     height: auto;
@@ -169,15 +169,15 @@ body {
     border-radius: 8px;
 }
 
-.about-text h2{
+.about-text h2 {
     font-size: 60px;
 }
 
-.about-text h2 span{
+.about-text h2 span {
     color: #0ef;
 }
 
-.about-text p{ 
+.about-text p {
     color: aliceblue;
     font-size: 20px;
     line-height: 1.4;
@@ -185,35 +185,35 @@ body {
 }
 
 
-.services{
+.services {
     color: aliceblue;
     font-size: 20px;
     line-height: 1.4;
     margin-bottom: 4rem;
 }
 
-.sub-title{
+.sub-title {
     text-align: center;
     font-size: 60px;
     padding-bottom: 70px;
 }
 
-.sub-title span{
+.sub-title span {
     color: #0ef;
 }
 
-.container{
+.container {
     padding: 90px;
 }
 
-.services-list{
+.services-list {
     display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(259px,1fr));
+    grid-template-columns: repeat(auto-fit, minmax(259px, 1fr));
     grid-gap: 40px;
     margin-top: 50px;
 }
 
-.services-list div{
+.services-list div {
     background-color: transparent;
     padding: 40px;
     font-size: 13px;
@@ -222,7 +222,7 @@ body {
     border-radius: 20px;
     transition: background 0.5s, transform 0.5s;
     box-shadow: 1px 1px 20px #012290f7,
-               1px 1px 40px #012290f7                
+        1px 1px 40px #012290f7
 }
 
 .services-list div i {
@@ -230,13 +230,13 @@ body {
     margin-bottom: 30px;
 }
 
-.services-list div h2{
+.services-list div h2 {
     font-size: 30px;
     font-weight: 500;
     margin-bottom: 15px;
 }
 
-.services-list div a{
+.services-list div a {
     text-decoration: none;
     color: #000000;
     font-size: 12px;
@@ -244,7 +244,7 @@ body {
     display: inline-block;
 }
 
-.read{
+.read {
     display: inline-block;
     padding: 12px 28px;
     background: #0ef;
@@ -261,29 +261,29 @@ body {
         0 0 25px #0ef
 }
 
-.read:hover{
+.read:hover {
     box-shadow: 0 0 5px cyan,
-    0 0 25px cyan, 0 0 50px cyan,
-    0 0 100px cyan, 0 0 200px cyan
+        0 0 25px cyan, 0 0 50px cyan,
+        0 0 100px cyan, 0 0 200px cyan
 }
 
-.services-list div:hover{
+.services-list div:hover {
     transform: translateY(-10px);
 }
 
-section{
+section {
     display: flex;
     flex-wrap: wrap;
 }
 
-.container1{
+.container1 {
     width: 600px;
     height: 500px;
     padding: 75px 90px;
     margin-left: 120px;
 }
 
-.heading1{
+.heading1 {
     text-align: center;
     text-decoration: underline;
     text-underline-offset: 10px;
@@ -291,30 +291,30 @@ section{
     margin-bottom: 50px;
 }
 
-.bar{
+.bar {
     font-size: 23px;
 }
 
-.Technical-bars .bar{
+.Technical-bars .bar {
     margin-top: 40px 0;
 }
 
-.Technical-bars .bar:first-child{
+.Technical-bars .bar:first-child {
     margin-top: 0;
 }
 
-.Technical-bars .bar:last-child{
+.Technical-bars .bar:last-child {
     margin-bottom: 0;
 }
 
-.Technical-bars .bar .info{
+.Technical-bars .bar .info {
     margin-bottom: 5px;
 }
 
-.Technical-bars .bar .info span{
+.Technical-bars .bar .info span {
     font-size: 17px;
     font-weight: 500;
-    animation:showText 0.5s 1s linear forwards;
+    animation: showText 0.5s 1s linear forwards;
     opacity: 0;
 }
 
@@ -324,44 +324,48 @@ section{
     width: 100%;
     height: 5px;
     background-color: #000000;
-    animation: animate 1s cubic-bezier(1,0,0,5,1) forwards;
+    animation: animate 1s cubic-bezier(1, 0, 0, 5, 1) forwards;
     transform: scaleX(0);
     transform-origin: left;
 }
 
-@keyframes animate{
-    100%{
+@keyframes animate {
+    100% {
         transform: scaleX(1);
     }
 }
 
-.Technical-bars .bar .progress-line span{
+.Technical-bars .bar .progress-line span {
     height: 100%;
     background-color: #0ef;
     position: absolute;
     border-radius: 10px;
-    animation: animate 1s 1s cubic-bezier(1,0,0,5,1) forwards;
+    animation: animate 1s 1s cubic-bezier(1, 0, 0, 5, 1) forwards;
     transform: scaleX(0);
     transform-origin: left;
 }
 
-.progress-line.html span{
+.progress-line.html span {
     width: 90%;
 }
-.progress-line.css span{
+
+.progress-line.css span {
     width: 60%;
 }
-.progress-line.javascript span{
+
+.progress-line.javascript span {
     width: 88%;
 }
-.progress-line.python span{
+
+.progress-line.python span {
     width: 50%;
 }
-.progress-line.react span{
+
+.progress-line.react span {
     width: 85%;
 }
 
-.progress-line span::after{
+.progress-line span::after {
     position: absolute;
     padding: 1px 8px;
     background-color: #000;
@@ -374,23 +378,27 @@ section{
     opacity: 0;
 }
 
-.progress-line.html span::after{
-    content: "90%";
-}
-.progress-line.css span::after{
-    content: "85%";
-}
-.progress-line.javascript span::after{
-    content: "65%";
-}
-.progress-line.python span::after{
-    content: "90%";
-}
-.progress-line.react span::after{
+.progress-line.html span::after {
     content: "90%";
 }
 
-.progress-line span::before{
+.progress-line.css span::after {
+    content: "85%";
+}
+
+.progress-line.javascript span::after {
+    content: "65%";
+}
+
+.progress-line.python span::after {
+    content: "90%";
+}
+
+.progress-line.react span::after {
+    content: "90%";
+}
+
+.progress-line span::before {
     content: "";
     position: absolute;
     width: 0;
@@ -405,19 +413,19 @@ section{
     opacity: 0;
 }
 
-@keyframes showText{
-    100%{
+@keyframes showText {
+    100% {
         opacity: 1;
     }
 }
 
-.radial-bars{
+.radial-bars {
     width: 100%;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
     align-items: flex-start;
-    
+
 }
 
 .radial-bars {
@@ -427,7 +435,7 @@ section{
     position: relative;
 }
 
-.radial-bars  svg{
+.radial-bars svg {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -436,7 +444,7 @@ section{
     height: 160px;
 }
 
-.radial-bars .progress-bar{
+.radial-bars .progress-bar {
     stroke-width: 10;
     stop-color: black;
     fill: transparent;
@@ -445,13 +453,14 @@ section{
     stroke-linecap: round;
     animation: animate-bar 1s linear forwards;
 }
-@keyframes animate-bar{
-    100%{
+
+@keyframes animate-bar {
+    100% {
         stroke-dashoffset: -1;
     }
 }
 
-.path{
+.path {
     stroke-width: 10;
     stop-color: #0ef;
     fill: transparent;
@@ -460,33 +469,47 @@ section{
     stroke-linecap: round;
 }
 
-.path-1{animation: animate-path1 1s 1s linear forwards;}
-.path-2{animation: animate-path2 1s 1s linear forwards;}
-.path-3{animation: animate-path3 1s 1s linear forwards;}
-.path-4{animation: animate-path4 1s 1s linear forwards;}
+.path-1 {
+    animation: animate-path1 1s 1s linear forwards;
+}
 
-@keyframes animate-path1{
-    100%{
+.path-2 {
+    animation: animate-path2 1s 1s linear forwards;
+}
+
+.path-3 {
+    animation: animate-path3 1s 1s linear forwards;
+}
+
+.path-4 {
+    animation: animate-path4 1s 1s linear forwards;
+}
+
+@keyframes animate-path1 {
+    100% {
         stroke-dashoffset: 50;
     }
 }
-@keyframes animate-path2{
-    100%{
+
+@keyframes animate-path2 {
+    100% {
         stroke-dashoffset: 175;
     }
 }
-@keyframes animate-path3{
-    100%{
+
+@keyframes animate-path3 {
+    100% {
         stroke-dashoffset: 125;
     }
 }
-@keyframes animate-path4{
-    100%{
+
+@keyframes animate-path4 {
+    100% {
         stroke-dashoffset: 75;
     }
 }
 
-.radial-bars .percentage{
+.radial-bars .percentage {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -497,7 +520,7 @@ section{
     opacity: 0;
 }
 
-.radial-bars .text{
+.radial-bars .text {
     width: 100%;
     position: absolute;
     text-align: center;
@@ -511,44 +534,44 @@ section{
 }
 
 
-.main-text{
+.main-text {
     padding-top: 130px;
     margin-top: 200px;
 }
 
-.main-text h2{
+.main-text h2 {
     font-size: 60px;
     line-height: 1;
     text-align: center;
 }
 
-.main-text h2 span{
+.main-text h2 span {
     color: #0ef;
 }
 
-.portfolio-content{
+.portfolio-content {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(359px, auto));
 }
 
-.row{
+.row {
     position: relative;
     overflow: hidden;
     border-radius: 8px;
     cursor: pointer;
 }
 
-.row img{
+.row img {
     width: 100%;
     border-radius: 8px;
     display: block;
     transition: transform 0.5s;
 }
 
-.layer{
+.layer {
     width: 100%;
     height: 0;
-    background: linear-gradient(rgba(0,0,0,1),#0ef);
+    background: linear-gradient(rgba(0, 0, 0, 1), #0ef);
     position: absolute;
     border-radius: 8px;
     left: 0;
@@ -565,65 +588,130 @@ section{
     transition: height 0.5s;
 }
 
-.layer h5{
+.layer h5 {
     color: #000;
     font-size: 20px;
     font-weight: 600;
     margin-bottom: 15px;
 }
 
-.layer p{
+.layer p {
     color: #000;
     font-size: 1rem;
     line-height: 1.8;
 }
-    
-.layer i{
+
+.layer i {
     color: #ff004f;
     margin-top: 20px;
     font-size: 20px;
-    background:#fff;
+    background: #fff;
     width: 60px;
     height: 60px;
     display: flex;
     align-items: center;
     justify-content: center;
     border-radius: 50%;
-} 
+}
 
-.row:hover img{
+.row:hover img {
     transform: scale(1.1);
 }
 
-.row:hover .layer{
+.row:hover .layer {
     height: 100%;
 }
 
-.contact{
+.contact {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     align-items: center;
     gap: 3rem;
     padding-left: 30px;
     margin-top: 130px;
-    }
+}
 
-.contact-text h2{
+.contact-text h2 {
     font-size: 90px;
     line-height: 1;
     text-align: center;
-    }
+}
 
-.contact-text h2 span{
+.contact-text h2 span {
     color: #0ef;
-    }
-    
-    .contact-text h4{
+}
+
+.contact-text h4 {
     margin: 15px 0;
-    color: rgb(228,228,228);
+    color: rgb(228, 228, 228);
     font-size: 20px;
     font-weight: 600;
-    }
+}
+
+.contact-text p {
+    color: rgb(177, 177, 177);
+    font-size: 20px;
+    line-height: 30px;
+    margin-bottom: 2rem;
+}
+
+.contact-list {
+    margin-bottom: 3rem;
+}
+
+.contact-list li {
+    margin-bottom: 10px;
+    display: block;
+}
+
+.contact-list li {
+    margin-bottom: 10px;
+    display: block;
+}
+
+.contact-list i {
+    display: inline-block;
+    color: #eef;
+    font-size: 20px;
+    font-weight: 600;
+    transition: all .40s ease;
+}
+
+.contact-list li a:hover {
+    transform: scale(1.01) translateY(-5px);
+    color: #0ef;
+}
+
+
+.contact-icons i {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    background: transparent;
+    border: 2px solid #0ef;
+    border-radius: 50%;
+    font-size: 20px;
+    color: #0ef;
+    text-decoration: none;
+    margin: 30px 15px 30px 0;
+    transition: .5s ease;
+    opacity: 0;
+    animation: slideLeft 1s ease forwards;
+    animation-delay: calc(.25 * var(--1));
+}
+
+.contact-icons i:hover {
+    background: #0ef;
+    color: #000;
+    box-shadow: 0 0 20px #0ef;
+}
+
+.contact-form form {
+    position: relative;
+}
+
 
 
 
