--- a/style.css
+++ b/style.css
@@ -754,6 +754,29 @@ form textarea {
         0 0 100px cyan, 0 0 200px cyan
 }
 
+.Last-text p {
+    width: 100%;
+    text-align: center;
+    padding: 25px 0;
+    background: rgb(7, 85, 91);
+    font-weight: 300;
+    margin-top: 70px;
+}
+
+.top {
+    position: fixed;
+    bottom: 2.1rem;
+    right: 2.1rem;
+}
+
+.top i {
+    color: #000;
+    background: #Bef;
+    font-size: 20px;
+    padding: 10px;
+    border-radius: 0.5rem;
+}
+
 
 
 
