--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     font-family: 'poppins', sans-serif;
+    scroll-behavior: smooth;
     box-sizing: border-box;
 }
 
@@ -9,6 +10,11 @@ body {
 
     color: #fff;
     background: #081b29;
+}
+
+section {
+    min-height: 100vh;
+    padding: 10rem 9% 2rem;
 }
 
 .header {
@@ -58,7 +64,8 @@ body {
     width: 100%;
     justify-content: space-between;
     height: 100vh;
-    background: url(Images/pic7.jpg) no-repeat;
+    background-color: #081b29;
+    /*url(Images/pic7.jpg) no-repeat;*/
     background-size: cover;
     background-position: center;
     display: flex;
@@ -66,10 +73,15 @@ body {
     padding: 70px 10% 0;
 }
 
+.home-img img {
+    width: 35vw;
+
+}
 
 .home-content {
     max-width: 600px;
 }
+
 
 .home-content h3 {
     font-size: 32px;
@@ -162,11 +174,9 @@ body {
 }
 
 .about-img img {
-    padding-bottom: 20%;
-    max-width: 630px;
-    height: auto;
-    width: 100%;
-    border-radius: 8px;
+
+    width: 35vw;
+
 }
 
 .about-text h2 {
@@ -184,7 +194,7 @@ body {
     margin-bottom: 4rem;
 }
 
-
+/*
 .services {
     color: aliceblue;
     font-size: 20px;
@@ -192,15 +202,7 @@ body {
     margin-bottom: 4rem;
 }
 
-.sub-title {
-    text-align: center;
-    font-size: 60px;
-    padding-bottom: 70px;
-}
 
-.sub-title span {
-    color: #0ef;
-}
 
 .container {
     padding: 90px;
@@ -270,10 +272,21 @@ body {
 .services-list div:hover {
     transform: translateY(-10px);
 }
+*/
 
 section {
     display: flex;
     flex-wrap: wrap;
+}
+
+.sub-title {
+    text-align: center;
+    font-size: 60px;
+    padding-bottom: 70px;
+}
+
+.sub-title span {
+    color: #0ef;
 }
 
 .container1 {
