--- a/style.css
+++ b/style.css
@@ -287,17 +287,38 @@ section {
 }
 
 .container1 {
-    width: 600px;
+   /* width: 600px;
     height: 500px;
     padding: 75px 90px;
-    margin-left: 120px;
+    margin-left: 120px; */
+
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 30px;
+    padding: 20px;
 }
 
+.container1 i {
+    font-size: 60px;
+    transition: transform 0.3s ease, color 0.3s ease; 
+  }
 
+  .container1 i:hover {
+    transform: scale(1.5); /* Increases size slightly on hover */
+    cursor: pointer;
+  }
 
-.bar {
-    font-size: 23px;
-}
+  /* Responsive for mobile devices */
+  @media (max-width: 768px) {
+    .sub-title {
+      font-size: 28px;
+    }
+  
+    .container1 i {
+      font-size: 48px;
+    }
+  }
 
 
 .main-text {
