--- a/style.css
+++ b/style.css
@@ -320,11 +320,25 @@ section {
     transition: transform 0.3s ease, color 0.3s ease;
 }
 
+.container2 img {
+    
+    width: 80px;
+    height: 90px;
+    transition: transform 0.3s ease, color 0.3s ease;
+}
+
 .container2 i:hover {
     transform: scale(1.5);
     /* Increases size slightly on hover */
     cursor: pointer;
 }
+
+.container2 img:hover {
+    transform: scale(1.5);
+    /* Increases size slightly on hover */
+    cursor: pointer;
+}
+
 
 .sub-title1 {
     text-align: center;
