--- a/style.css
+++ b/style.css
@@ -416,9 +416,9 @@ section {
     transition: transform 0.5s;
 }
 
-.layer {
+.row .layer {
     width: 100%;
-    height: 0;
+    height: 0%;
     background: linear-gradient(rgba(0, 0, 0, 1), #0ef);
     position: absolute;
     border-radius: 8px;
@@ -432,7 +432,7 @@ section {
     text-align: center;
     justify-content: center;
     text-align: center;
-    padding: 0 40px;
+    padding: 0 rem;
     transition: height 0.5s;
 }
 
@@ -443,6 +443,12 @@ section {
     margin-bottom: 15px;
 }
 
+
+
+.layer a i{
+    font-size: 2rem;
+    color: rgb(0, 0, 0);
+}
 .layer p {
     color: #000;
     font-size: 1rem;
