--- a/style.css
+++ b/style.css
@@ -416,7 +416,7 @@ section {
 .contact-text h2 {
     font-size: 90px;
     line-height: 1;
-    text-align: center;
+    text-align: left;
 }
 
 .contact-text h2 span {
@@ -543,6 +543,10 @@ form textarea {
     background: rgb(7, 85, 91);
     font-weight: 300;
     margin-top: 70px;
+}
+
+.Last-text p span{
+    color: #0ef;
 }
 
 .top {
