--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ section {
     width: 100%;
     justify-content: space-between;
     height: 100vh;
-    background-color: #031b31;
+    background-color: #031b31; 
     background-size: cover;
     background-position: center;
     display: flex;
@@ -76,6 +76,7 @@ section {
 
 .home-img img {
     width: 35vw;
+   
 
 }
 
@@ -274,7 +275,8 @@ section {
 .sub-title1 {
     text-align: center;
     font-size: 60px;
-    padding-bottom: 70px;
+    padding-bottom: 50px;
+    margin-top: 50px;
     
 }
 
@@ -341,16 +343,15 @@ section {
 
 .row img {
     width: 100%;
-    
     border-radius: 8px;
     display: block;
-    transition: transform 0.5s;
+    transition: transform 0.5s, opacity 0.5s;
 }
 
 .row .layer {
     width: 100%;
     height: 0;
-    background: linear-gradient(rgba(0, 0, 0, 1), #0ef);
+    background: linear-gradient(rgba(0, 0, 0, 0.5), #0ef);
     position: absolute;
     border-radius: 8px;
     left: 0;
@@ -398,6 +399,7 @@ section {
 
 .row:hover img {
     transform: scale(1.1);
+    opacity: 0.9;
 }
 
 .row:hover .layer {
